# remote-sensing-ssl

./: .gitignore  extract_features.py  featuresfeatures.csv  nohup.out  pyproject.toml  vis.ipynb  visualize-clusters.py
bash/: generate_all_features.sh
scripts/: download-ghana-tiles.py  download-sentinel-images.py  gh_tile_dataset.py  ghana-geodata-download.py  meta-geodata-download.py  train_test_split.py  tuner.py  tuning.py  visualise_feature_scatterplot.py
tuning/: classification_tuning.db
